--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -203,7 +203,7 @@
                                                             text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
                                                             focus:ring-offset-2 sm:w-auto"
                                                     >Close</button>
-                                                    <form method="post"  action="{% url 'delete_team' team.name %}">
+                                                    <form method="post"  action="{% url 'delete_team' team.id %}">
                                                         {% csrf_token %}
                                                         <button type="submit"
                                                                 class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
