--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -264,6 +264,76 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <div class="sm:flex sm:items-center">
+                    <div class="sm:flex-auto">
+                        <h2 class="text-lg font-medium text-gray-900">Links</h2>
+                        <p class="mt-2 text-sm text-gray-700">Company Links to display on the home page</p>
+                    </div>
+                    <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                        <a type="button" href="{% url 'add_link' %}"
+                           class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add Link</a>
+                    </div>
+                </div>
+                <div class="mt-8 flex flex-col">
+                    <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                        <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                            <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+                                <table class="min-w-full divide-y divide-gray-300">
+                                    <thead class="bg-gray-50">
+                                    <tr>
+                                        <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
+                                        <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">URL</th>
+                                        <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                                            <span class="sr-only">Controls</span>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody class="divide-y divide-gray-200 bg-white">
+                                    <div id="overlay" class="fixed hidden z-40 w-screen h-screen inset-0 bg-gray-900 bg-opacity-60"></div>
+                                    {% for link in links %}
+                                        <tr>
+                                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ link.name }}</td>
+                                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ link.url }}</td>
+                                            <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                                                <a href="{% url 'update_link' link.pk %}" class="text-indigo-600 hover:text-indigo-900">Update</a>
+                                                <br>
+                                                <button type="button" class="team-delete-button text-red-600 hover:text-red-900" data-modal-target="dialog-{{ link.id }}">Delete</button>
+                                                <div id="dialog-{{ link.id }}"
+                                                     class="team-delete-modal hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg w-fit">
+                                                    <h1 class="text-2xl font-semibold sm:text-center">Confirmation of Deletion</h1>
+                                                    <div class="py-5 border-t border-b border-gray-300">
+                                                        <p>Are you sure you want to delete this link: {{ link.name }}</p>
+                                                    </div>
+                                                    <div class="flex justify-around">
+                                                        <button
+                                                                id="close-{{ link.id }}"
+                                                                data-modal-target="dialog-{{ link.id }}"
+                                                                class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
+                                                                text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
+                                                                focus:ring-offset-2 sm:w-auto"
+                                                        >Close
+                                                        </button>
+                                                        <form method="post" action="{% url 'delete_link' link.id %}">
+                                                            {% csrf_token %}
+                                                            <button type="submit"
+                                                                    class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
+                                                                        px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
+                                                                        focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
+                                                            >Yes, I'm sure
+                                                            </button>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script>
