--- a/templates/pages/terms_of_service.html
+++ b/templates/pages/terms_of_service.html
@@ -37,7 +37,7 @@
             <div class="mx-auto max-w-prose text-lg">
                 <h1>
                     <span class="mt-2 block text-center text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">Terms of Service</span>
-                    <span class="block text-center text-lg font-semibold text-indigo-600">Last Updated: February 8th, 2023</span>
+                    <span class="block text-center text-lg font-semibold text-indigo-600">Last Updated: March 22nd, 2023</span>
                 </h1>
             </div>
             <div class="prose prose-lg prose-indigo mx-auto mt-6 text-gray-500">
@@ -47,7 +47,7 @@
                 </p>
                 <div>
                     <p style="line-height:18.0pt;font-size:12.0pt;line-height:18.0pt;font-family:Times New Roman;color:#000000;text-align:Left;"><span style="font-style:normal;font-weight:bold;text-decoration:underline;">Intellectual Property</span><br>All content published and made available on our
-                        Site is the property of Aaron Spindler and the Site's creators. This includes, but is not limited to images, text, logos, documents, downloadable files and anything that contributes to the composition of our Site.
+                        Site is the property of Team Bio and the Site's creators. This includes, but is not limited to images, text, logos, documents, downloadable files and anything that contributes to the composition of our Site.
                     </p></div>
                 <div>
                     <p style="line-height:18.0pt;font-size:12.0pt;line-height:18.0pt;font-family:Times New Roman;color:#000000;text-align:Left;"><span style="font-style:normal;font-weight:bold;text-decoration:underline;">Acceptable Use</span><br>As a user of our Site, you agree to use our Site
