add ability to delete location and refactor modal logic (#201)
Co-authored-by: Aaron Spindler <aaron@xnovax.net>

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,7 +20,7 @@
 
         <!-- Tailwinds CSS -->
         <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 </head>
@@ -143,7 +143,7 @@
     <script src="https://js.stripe.com/v3/"></script>
     <!-- Project JS -->
     <script src="{% static 'js/base.js' %}"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
 {% endblock javascript %}
 <!-- 100% privacy friendly analytics -->
 <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
