--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -308,33 +308,13 @@
                                             <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ link.name }}</td>
                                             <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ link.url }}</td>
                                             <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                                                <button type="button" class="team-delete-button text-red-600 hover:text-red-900" data-modal-target="dialog-{{ link.id }}">Delete</button>
-                                                <div id="dialog-{{ link.id }}"
-                                                     class="team-delete-modal hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg w-fit">
-                                                    <h1 class="text-2xl font-semibold sm:text-center">Confirmation of Deletion</h1>
-                                                    <div class="py-5 border-t border-b border-gray-300">
-                                                        <p>Are you sure you want to delete this link: {{ link.name }}</p>
-                                                    </div>
-                                                    <div class="flex justify-around">
-                                                        <button
-                                                                id="close-{{ link.id }}"
-                                                                data-modal-target="dialog-{{ link.id }}"
-                                                                class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
-                                                                text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
-                                                                focus:ring-offset-2 sm:w-auto"
-                                                        >Close
-                                                        </button>
-                                                        <form method="post" action="{% url 'delete_link' link.id %}">
-                                                            {% csrf_token %}
-                                                            <button type="submit"
-                                                                    class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
-                                                                        px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
-                                                                        focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
-                                                            >Yes, I'm sure
-                                                            </button>
-                                                        </form>
-                                                    </div>
-                                                </div>
+                                                <form action="{% url 'delete_link' link.pk %}" method="post">
+                                                    {% csrf_token %}
+                                                    <button type="submit"
+                                                            class="text-red-600 hover:text-red-900">
+                                                        Delete
+                                                    </button>
+                                                </form>
                                             </td>
                                         </tr>
                                     {% endfor %}
