--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -14,6 +14,12 @@
                 <div class="space-y-5 sm:space-y-4 md:max-w-xl lg:max-w-3xl xl:max-w-none">
                     <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">{{ user.company }} Team</h2>
                 </div>
+                {% if show_links %}
+                    <br>
+                    {% for link in links %}
+                        <a href="{{ link.url }}"><span class="inline-flex items-center rounded-full bg-indigo-100 px-3 py-0.5 text-sm font-medium text-indigo-800">{{ link.name }}</span></a>
+                    {% endfor %}
+                {% endif %}
                 {% if show_map %}
                     <div id="map" width="100%" style='height:400px'></div>
                     <script>
