--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -197,6 +197,44 @@
 
                                             <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                                                 <a href="{% url 'update_location' location.pk %}" class="text-indigo-600 hover:text-indigo-900">Update<span class="sr-only">, {{ location.name }}</span></a>
+                                                <br>
+                                                <button type="button" class="team-delete-button text-red-600 hover:text-red-900" data-modal-toggle="delete-location-{{ location.id }}">Delete</button>
+                                                <div id="delete-location-{{ location.id }}" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">
+                                                    <div class="relative w-full h-full max-w-md md:h-auto">
+                                                        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 w-fit">
+                                                            <button
+                                                                    type="button"
+                                                                    class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
+                                                                    data-modal-hide="delete-location-{{ location.id }}"
+                                                            >
+                                                                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                                                                </svg>
+                                                                <span class="sr-only">Close modal</span>
+                                                            </button>
+                                                            <div class="p-6 text-center">
+                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                                                <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this location: {{ location.name }} ?</h3>
+                                                                <div class="flex justify-around">
+                                                                    <button
+                                                                            data-modal-hide="delete-location-{{ location.id }}"
+                                                                            class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
+                                                                            text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
+                                                                            focus:ring-offset-2 sm:w-auto"
+                                                                    >Close</button>
+                                                                    <form method="post" action="{% url 'delete_location' location.id %}">
+                                                                        {% csrf_token %}
+                                                                        <button type="submit"
+                                                                                class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
+                                                                                    px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
+                                                                                    focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
+                                                                        >Yes, I'm sure</button>
+                                                                    </form>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </td>
                                         </tr>
                                     {% endfor %}
@@ -232,7 +270,6 @@
                                     </tr>
                                     </thead>
                                     <tbody class="divide-y divide-gray-200 bg-white">
-                                    <div id="overlay" class="fixed hidden z-40 w-screen h-screen inset-0 bg-gray-900 bg-opacity-60"></div>
                                     {% for team in teams %}
                                         <tr>
                                             <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ team.name }}</td>
@@ -240,31 +277,41 @@
                                             <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                                                 <a href="{% url 'update_team' team.pk %}" class="text-indigo-600 hover:text-indigo-900">Update</a>
                                                 <br>
-                                                <button type="button" class="team-delete-button text-red-600 hover:text-red-900" data-modal-target="dialog-{{ team.id }}">Delete</button>
-                                                <div id="dialog-{{ team.id }}"
-                                                     class="team-delete-modal hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg w-fit">
-                                                    <h1 class="text-2xl font-semibold sm:text-center">Confirmation of Deletion</h1>
-                                                    <div class="py-5 border-t border-b border-gray-300">
-                                                        <p>Are you sure you want to delete this team: {{ team.name }}</p>
-                                                    </div>
-                                                    <div class="flex justify-around">
-                                                        <button
-                                                                id="close-{{ team.id }}"
-                                                                data-modal-target="dialog-{{ team.id }}"
-                                                                class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
-                                                                text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
-                                                                focus:ring-offset-2 sm:w-auto"
-                                                        >Close
-                                                        </button>
-                                                        <form method="post" action="{% url 'delete_team' team.id %}">
-                                                            {% csrf_token %}
-                                                            <button type="submit"
-                                                                    class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
-                                                                        px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
-                                                                        focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
-                                                            >Yes, I'm sure
+                                                <button type="button" class="text-red-600 hover:text-red-900" data-modal-toggle="delete-team-{{ team.id }}">Delete</button>
+                                                <div id="delete-team-{{ team.id }}" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">
+                                                    <div class="relative w-full h-full max-w-md md:h-auto">
+                                                        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 w-fit">
+                                                            <button
+                                                                    type="button"
+                                                                    class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
+                                                                    data-modal-hide="delete-team-{{ team.id }}"
+                                                            >
+                                                                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                                                                </svg>
+                                                                <span class="sr-only">Close modal</span>
                                                             </button>
-                                                        </form>
+                                                            <div class="p-6 text-center">
+                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                                                <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this team: {{ team.name }} ?</h3>
+                                                                <div class="flex justify-around">
+                                                                    <button
+                                                                            data-modal-hide="delete-team-{{ team.id }}"
+                                                                            class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
+                                                                            text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
+                                                                            focus:ring-offset-2 sm:w-auto"
+                                                                    >Close</button>
+                                                                    <form method="post" action="{% url 'delete_team' team.id %}">
+                                                                        {% csrf_token %}
+                                                                        <button type="submit"
+                                                                                class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
+                                                                                    px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
+                                                                                    focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
+                                                                        >Yes, I'm sure</button>
+                                                                    </form>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </td>
@@ -326,27 +373,5 @@
                 </div>
             </div>
         </div>
-        <script>
-            const deleteButtons = document.querySelectorAll(".team-delete-button");
-            const closeButtons = document.querySelectorAll(".close-modal");
-            const modalElements = document.querySelectorAll(".team-delete-modal");
-            const overlayElement = document.querySelector("#overlay");
-
-            deleteButtons.forEach((element) => {
-                element.onclick = function () {
-                    overlayElement.classList.remove("hidden");
-                    const modal = document.querySelector(`#${element.dataset.modalTarget}`);
-                    modal.classList.remove("hidden");
-                }
-            })
-
-            closeButtons.forEach((element) => {
-                element.onclick = function () {
-                    overlayElement.classList.add("hidden");
-                    const modal = document.querySelector(`#${element.dataset.modalTarget}`);
-                    modal.classList.add("hidden");
-                }
-            })
-        </script>
     </main>
 {% endblock content %}
