--- a/templates/companies/user_profile.html
+++ b/templates/companies/user_profile.html
@@ -214,7 +214,20 @@
                                     </div>
                                 {% endif %}
                             </dl>
+
+                            <br>
+                            <dt class="text-lg font-large text-black-500">Pets</dt>
+                            <ul role="list" class="mx-auto mt-20 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-8 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+                                {% for pet in pets %}
+                                    <li>
+                                        <img class="mx-auto h-56 w-56 rounded-full" src="{{ pet.picture.url }}" alt="">
+                                        <h3 class="mt-6 text-base font-semibold leading-7 tracking-tight text-gray-900">{{ pet.name }}</h3>
+                                        <p class="text-sm leading-6 text-gray-600">{{ pet.pet_type.name }}</p>
+                                    </li>
+                                {% endfor %}
+                            </ul>
                         </div>
+
 
                         {#                        <!-- Team member list -->#}
                         {#                        <div class="mx-auto mt-8 max-w-5xl px-4 pb-12 sm:px-6 lg:px-8">#}
