Changed buttons from bootstrap to tailwinds

--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -7,8 +7,9 @@
         {% csrf_token %}
         {{ form }}
         <div class="form-actions">
-            <button class="btn btn-primary" type="submit" name="action" value="Set Password">Change
-                Password
+            <button type="submit" name="action" value="Set Password"
+                    class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                Change Password
             </button>
         </div>
     </form>
