--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -15,7 +15,10 @@
         {% endblocktrans %}</p>
         <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
             {% csrf_token %}
-            <button class="btn btn-primary" type="submit">{% trans 'Confirm' %}</button>
+            <button type="submit"
+                    class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                Confirm
+            </button>
         </form>
     {% else %}
         {% url 'account_email' as email_url %}
