--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,6 +7,9 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form }}
-        <button class="btn btn-primary" type="submit">Reset Password</button>
+        <button type="submit"
+                class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+            Reset Password
+        </button>
     </form>
 {% endblock content %}
