--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -13,7 +13,10 @@
             <form method="POST" action=".">
                 {% csrf_token %}
                 {{ form }}
-                <button class="btn btn-primary" type="submit">Change Password</button>
+                <button type="submit"
+                        class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                    Change Password
+                </button>
             </form>
         {% else %}
             <p>Your password is now changed.</p>
