--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -8,40 +8,42 @@
             <div>
                 <h1 class="text-3xl font-bold leading-6 text-gray-900">{{ user.company }} Settings</h1>
             </div>
-            <div class="sm:flex sm:items-center">
-                <div class="sm:flex-auto">
-                    <h2 class="text-lg font-medium text-gray-900">Billing</h2>
-                </div>
-            </div>
-            <div class="flex flex-col">
-                <div class="-my-8 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                    <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-                        {% if not billing_email %}
-                            <button type="submit" id="subscribeButton"
-                                    class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-                                Subscribe
-                            </button>
-                            {% if user.company.in_trial_period %}
-                                <p class="mt-2 ml-3 text-sm text-gray-700">
-                                    You have {{ user.company.days_left_in_trial }} days left in your trial. You can upgrade to a paid plan at any time.
-                                <p>
-                                    {% else %}
-                                <p class="mt-2 ml-3 text-sm text-red-600">
-                                    Your trial has ended. You must subscribe to continue using Team Bio!
-                                </p>
-                            {% endif %}
-                        {% else %}
-                            <p class="mt-1 mb-1 ml-1 text-sm text-gray-700">
-                                {{ billing_email }} is the billing contact for your account.
-                            <p>
-                            <a type="button" href="https://billing.stripe.com/p/login/4gw8zp2YTeZmcta288"
-                               class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Manage
-                                Billing</a>
-                        {% endif %}
+            {% if not user.company.billing_disabled %}
+                <div class="sm:flex sm:items-center">
+                    <div class="sm:flex-auto">
+                        <h2 class="text-lg font-medium text-gray-900">Billing</h2>
                     </div>
                 </div>
-            </div>
-            <br>
+                <div class="flex flex-col">
+                    <div class="-my-8 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                        <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                            {% if not billing_email %}
+                                <button type="submit" id="subscribeButton"
+                                        class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                                    Subscribe
+                                </button>
+                                {% if user.company.in_trial_period %}
+                                    <p class="mt-2 ml-3 text-sm text-gray-700">
+                                        You have {{ user.company.days_left_in_trial }} days left in your trial. You can upgrade to a paid plan at any time.
+                                    <p>
+                                        {% else %}
+                                    <p class="mt-2 ml-3 text-sm text-red-600">
+                                        Your trial has ended. You must subscribe to continue using Team Bio!
+                                    </p>
+                                {% endif %}
+                            {% else %}
+                                <p class="mt-1 mb-1 ml-1 text-sm text-gray-700">
+                                    {{ billing_email }} is the billing contact for your account.
+                                <p>
+                                <a type="button" href="https://billing.stripe.com/p/login/4gw8zp2YTeZmcta288"
+                                   class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Manage
+                                    Billing</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                <br>
+            {% endif %}
             <div class="sm:flex sm:items-center">
                 <div class="sm:flex-auto">
                     <h2 class="text-lg font-medium text-gray-900">Features</h2>
@@ -208,12 +210,15 @@
                                                                     data-modal-hide="delete-location-{{ location.id }}"
                                                             >
                                                                 <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                                                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                                                                          clip-rule="evenodd"></path>
                                                                 </svg>
                                                                 <span class="sr-only">Close modal</span>
                                                             </button>
                                                             <div class="p-6 text-center">
-                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                                                </svg>
                                                                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this location: {{ location.name }} ?</h3>
                                                                 <div class="flex justify-around">
                                                                     <button
@@ -221,14 +226,16 @@
                                                                             class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
                                                                             text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
                                                                             focus:ring-offset-2 sm:w-auto"
-                                                                    >Close</button>
+                                                                    >Close
+                                                                    </button>
                                                                     <form method="post" action="{% url 'delete_location' location.id %}">
                                                                         {% csrf_token %}
                                                                         <button type="submit"
                                                                                 class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
                                                                                     px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
                                                                                     focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
-                                                                        >Yes, I'm sure</button>
+                                                                        >Yes, I'm sure
+                                                                        </button>
                                                                     </form>
                                                                 </div>
                                                             </div>
@@ -287,12 +294,15 @@
                                                                     data-modal-hide="delete-team-{{ team.id }}"
                                                             >
                                                                 <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                                                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                                                                          clip-rule="evenodd"></path>
                                                                 </svg>
                                                                 <span class="sr-only">Close modal</span>
                                                             </button>
                                                             <div class="p-6 text-center">
-                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                                                <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                                                </svg>
                                                                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this team: {{ team.name }} ?</h3>
                                                                 <div class="flex justify-around">
                                                                     <button
@@ -300,14 +310,16 @@
                                                                             class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
                                                                             text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
                                                                             focus:ring-offset-2 sm:w-auto"
-                                                                    >Close</button>
+                                                                    >Close
+                                                                    </button>
                                                                     <form method="post" action="{% url 'delete_team' team.id %}">
                                                                         {% csrf_token %}
                                                                         <button type="submit"
                                                                                 class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
                                                                                     px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
                                                                                     focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
-                                                                        >Yes, I'm sure</button>
+                                                                        >Yes, I'm sure
+                                                                        </button>
                                                                     </form>
                                                                 </div>
                                                             </div>
